Controlling wheels of turtlebot3

--- a/turtlebot3_description/CMakeLists.txt
+++ b/turtlebot3_description/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(urdf REQUIRED)
 ################################################################################
 # Install
 ################################################################################
-install(DIRECTORY meshes rviz urdf launch
+install(DIRECTORY meshes rviz urdf ros2_control
   DESTINATION share/${PROJECT_NAME}
 )
 
