--- a/turtlebot3_bringup/CMakeLists.txt
+++ b/turtlebot3_bringup/CMakeLists.txt
@@ -12,5 +12,8 @@ install(
   DIRECTORY config launch
   DESTINATION share/${PROJECT_NAME}
 )
-
+install(
+  PROGRAMS
+  DESTINATION lib/${PROJECT_NAME}
+)
 ament_package()
