--- a/turtlebot3_bringup/config/turtlebot3_controllers.yaml
+++ b/turtlebot3_bringup/config/turtlebot3_controllers.yaml
@@ -13,8 +13,8 @@ controller_manager:
 
 turtlebot3_base_controller:
   ros__parameters:
-    left_wheel_names: ["left_wheel_joint"]
-    right_wheel_names: ["right_wheel_joint"]
+    left_wheel_names: ["wheel_left_joint"]
+    right_wheel_names: ["wheel_right_joint"]
 
     wheel_separation: 0.10
     #wheels_per_side: 1  # actually 2, but both are controlled by 1 signal
