--- a/turtlebot3_bringup/config/turtlebot3_controllers.yaml
+++ b/turtlebot3_bringup/config/turtlebot3_controllers.yaml
@@ -16,9 +16,9 @@ turtlebot3_base_controller:
     left_wheel_names: ["wheel_left_joint"]
     right_wheel_names: ["wheel_right_joint"]
 
-    wheel_separation: 0.10
+    wheel_separation: 0.287
     #wheels_per_side: 1  # actually 2, but both are controlled by 1 signal
-    wheel_radius: 0.015
+    wheel_radius: 0.033
 
     wheel_separation_multiplier: 1.0
     left_wheel_radius_multiplier: 1.0
@@ -41,7 +41,7 @@ turtlebot3_base_controller:
     # Velocity and acceleration limits
     # Whenever a min_* is unspecified, default to -max_*
     linear.x.has_velocity_limits: true
-    linear.x.has_acceleration_limits: true
+    linear.x.has_acceleration_limits: false
     linear.x.has_jerk_limits: false
     linear.x.max_velocity: 1.0
     linear.x.min_velocity: -1.0
@@ -50,7 +50,7 @@ turtlebot3_base_controller:
     linear.x.min_jerk: 0.0
 
     angular.z.has_velocity_limits: true
-    angular.z.has_acceleration_limits: true
+    angular.z.has_acceleration_limits: false
     angular.z.has_jerk_limits: false
     angular.z.max_velocity: 1.0
     angular.z.min_velocity: -1.0
